main/default/objects/Pager_Duty_Settings__c/Pager_Duty_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Pager Duty Settings</label>
</CustomObject>