main/default/objects/Pager_Duty_Settings__c/fields/PagerDuty_API_Token__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_API_Token__c</fullName>
    <label>PagerDuty API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>