main/default/objects/Pager_Duty_Settings__c/fields/PagerDuty_Enabled__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PagerDuty Enabled</label>
    <type>Checkbox</type>
</CustomField>