main/default/objects/Pager_Duty_Settings__c/fields/PagerDuty_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Service_ID__c</fullName>
    <label>PagerDuty Service ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>