main/default/objects/Pager_Duty_Settings__c/fields/PagerDuty_Service_Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Service_Integration_Key__c</fullName>
    <label>PagerDuty Service Integration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>