main/default/objects/Pager_Duty_Settings__c/fields/PagerDuty_User_Email__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_User_Email__c</fullName>
    <label>PagerDuty User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>